# warbell

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRACT.md  CONTRACT2.md  Cargo.toml  LICENSE  README.md  build.rs  warbell-codesign.pfx  warbell.wxs
.claude/: launch.json
.claude/skills/model-viewer/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/studio-port/: SKILL.md
.claude/skills/trailer-maker/: SKILL.md
.claude/skills/trailer-maker/scripts/: build_trailer.ps1  encode_scene.ps1
.claude/skills/visual-debug-cloud/: SKILL.md
.github/workflows/: release-on-bump.yml  release.yml
assets/icons/gameicons/: ATTRIBUTION.txt
assets/maps/: home_authoring.ron
assets/shaders/: atmospherics.wgsl  creature.wgsl  depth_blur.wgsl  dof.wgsl  foliage_wind.wgsl  godrays.wgsl  outline.wgsl  terrain.wgsl  water.wgsl
crates/core/: Cargo.toml
crates/core/src/: ambient.rs  animal.rs  block.rs  bridges.rs  buff_store.rs  chests.rs  city_plan.rs  combat_juice.rs  defense.rs  dummy.rs  dust.rs  factions.rs  forage_store.rs  frontier.rs  house_blockers.rs  inventory.rs  item_toast_store.rs  landmarks.rs  lib.rs  map_grid.rs  obstacles.rs  orb.rs  ore_store.rs  ork_config.rs  pathfinding.rs  player.rs  projectile.rs  quest.rs  resource_store.rs  rng.rs  roads.rs  shop_catalog.rs  tilemap.rs  town_store.rs  upgrade_store.rs  villager.rs  wave.rs
crates/core/tests/: map_reachability.rs  serde_roundtrip.rs
docs/: perf.md
docs/release-notes/: v0.16.1.md  v0.21.0.md
docs/specs/: 2026-06-07-bigger-map-and-wildlife.md  2026-06-07-ork-camps.md  bevy-0-18-1-polished-static-3d-scene-verified-apis.md  forest-biome-ground-specification-exact-bevy-port.md  forest-biome-props-ground-cover-exact-bevy-rebuild.md  forest-tree-models-exact-bevy-rebuild-recipe.md  three-js-rendering-pipeline-spec-for-bevy-0-18-1-p.md
docs/superpowers/plans/: 2026-06-07-szaman-spells.md  2026-06-09-city-building-economy.md  2026-06-09-voice-line-catalog-refactor.md  2026-06-13-chest-tiers-juice-mimics.md  2026-06-13-creature-detail-texture-and-animation.md  2026-07-03-fp-combat-viewmodel.md
docs/superpowers/specs/: 2026-06-07-audio-port-design.md  2026-06-07-bevy-playable-hero-design.md  2026-06-07-combat-feedback-design.md  2026-06-07-szaman-spells-design.md  2026-06-07-tileworld-parity-port-roadmap.md  2026-06-08-biome-prop-variety-design.md  2026-06-08-combat-feel-pass-design.md  2026-06-09-city-building-economy-design.md  2026-06-09-save-continue-design.md  2026-06-10-stone-miner-building-design.md  2026-06-11-castle-courtyard-redesign-design.md  2026-06-11-ui-character-redesign-design.md  2026-06-13-biome-distinctness-pass-design.md  2026-06-13-biome-wardens-design.md  2026-06-13-creature-detail-texture-and-animation-design.md  2026-06-14-main-menu-design.md  2026-06-15-affordance-hints-design.md  2026-06-16-guidance-voice-and-missing-sfx-design.md  2026-06-16-in-process-reset-design.md  2026-06-16-quest-system-design.md  2026-06-17-second-map-volcanic-ashlands-design.md  2026-06-23-unified-settings-menu-design.md  2026-06-24-game-feel-fx-batch-design.md  2026-06-26-exploration-gear-trials-design.md  2026-06-28-lush-foliage-ambient-life-design.md  2026-06-30-organic-road-network-design.md  2026-07-01-castle-props-merchant-shop-design.md  2026-07-01-kampania-misja-1-design.md  2026-07-02-cinematic-atmospherics-design.md  2026-07-03-fp-combat-viewmodel-design.md  2026-07-03-map-character-overhaul-design.md  2026-07-11-trailer-2-mechanics-scenariusz.md
installer/: tileworld.wxs
scripts/: capture-site-screenshots.sh  release.ps1
site/: changelog.html  index.html  sitemap.xml  styles.css
site/screenshots/reddit-update/: REDDIT_POST.md
src/: aftermath.rs  ambient_life.rs  atmospherics.rs  banner.rs  biome.rs  biome_desert.rs  biome_forest.rs  biome_rocky.rs  biome_snow.rs  biome_swamp.rs  biped.rs  blockers.rs  boats.rs  bog.rs  bridges.rs  build_fx.rs  camps.rs  capture.rs  castle.rs  castle_decor.rs  chest.rs  cinematic.rs  combat_fx.rs  compass.rs  controls.rs  creature.rs  creature_anim.rs  critters.rs  cursor.rs  debug_panel.rs  debug_stats.rs  decor.rs  defenses.rs  demo.rs  depth_blur.rs  distant.rs  distant_isles.rs  dof.rs  dying.rs  economy.rs  (+79 more)
src/audio/: advice.rs  ambience.rs  animals.rs  director.rs  footsteps.rs  hero_remarks.rs  lines.rs  mod.rs  music.rs  npc.rs  ork.rs  sfx.rs  synth.rs  voice.rs
src/boss/: mod.rs  models.rs
src/player/: anim.rs  arts.rs  block.rs  camera.rs  charge.rs  combat.rs  health.rs  mod.rs  model.rs  movement.rs  softlock.rs
src/rts/: ai.rs  audio.rs  build.rs  buildingbars.rs  camera.rs  command.rs  cursor.rs  deposits.rs  ecotest.rs  hud.rs  minimap.rs  mod.rs  ordermark.rs  pick.rs  select.rs  teamcolor.rs  unitbars.rs  units.rs  workers.rs
src/ui/: focus.rs  fonts.rs  graphics_menu.rs  icons.rs  mod.rs  notice.rs  settings.rs  theme.rs  widgets.rs
tools/: contour_extract.py  depth_estimate.py  final_parts.py  full_overlay.py  generate_builder.py  index.html  knight.html  loft_extract.py  master_segment.py  measure_final.py  measure_v2.py  merge_relief.py  panel_ruler.py  parts_segment.py  profile_dump.py  refine_boxes.py  serve.py  snap_boxes.py  turnaround_bbox.py
