[workspace]
members = ["crates/core"]

[package]
name = "tileworld_bevy_forest"
version = "0.5.0"
edition = "2024"

[dependencies]
# `wav` enables rodio's WAV decoder for the procedurally-baked SFX stings (`audio/synth.rs`);
# without it the in-memory WAV `AudioSource`s panic on play with `UnrecognizedFormat`.
bevy = { version = "0.18.1", features = ["wav"] }
bevy_egui = "0.39.1" # live debug-tuning panel (egui), targets bevy 0.18
# Pure, deterministic game logic vendored from the ditched port (zero deps, edition 2024).
# Source of the parity-tested stores: pathfinding, waves, upgrades, inventory, animals, etc.
# `serde` feature on so the save system can persist Player/Bag/Town/ResourceState (savegame.rs).
tileworld_core = { path = "crates/core", features = ["serde"] }
# Save/continue: JSON snapshot of a run, written at each dawn (`src/savegame.rs`).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Same wgpu version bevy 0.18.1 depends on — used in quality.rs to inspect
# RenderAdapterInfo::device_type for the hardware-aware startup preset.
wgpu = { version = "27.0.1", default-features = false }

# Windows-only: embed the app icon + version metadata (ProductName/Company/version) into the
# .exe resource section via build.rs. This is what Explorer, the taskbar, the winit window, and
# the installer all read — no runtime icon-loading code needed (winit picks up the exe's icon).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Compile bevy deps with optimizations even in dev — otherwise the scene runs
# at single digit FPS. Our own crate stays fast-to-compile at opt-level 0.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
# Line-tables only (not full debuginfo): keeps backtraces with file:line but shrinks the PDB so
# the link stays under MSVC's program-database size cap (full debuginfo trips LNK1140 now that the
# codebase has grown). Capture/clip builds can drop this entirely with CARGO_PROFILE_DEV_DEBUG=0.
debug = 1
