[workspace]
members = ["crates/core"]

[package]
name = "tileworld_bevy_forest"
# The one source of the release version (build.rs embeds it; the MSI binds to it).
# Bumping it on main cuts a release: .github/workflows/release-on-bump.yml tags
# and releases any version that lands here without a matching v* tag.
version = "0.20.0"
edition = "2024"

[dependencies]
# `wav` enables rodio's WAV decoder for the procedurally-baked SFX stings (`audio/synth.rs`);
# without it the in-memory WAV `AudioSource`s panic on play with `UnrecognizedFormat`.
# `bevy_ui_widgets` (new in 0.19) brings the headless core widgets — Slider / Checkbox /
# RadioButton — used by the graphics Settings page (`ui/graphics_menu.rs`).
bevy = { version = "0.19", features = ["wav", "bevy_ui_widgets"] }
bevy_egui = "0.41" # live debug-tuning panel (egui), targets bevy 0.19
# Pure, deterministic game logic vendored from the ditched port (zero deps, edition 2024).
# Source of the parity-tested stores: pathfinding, waves, upgrades, inventory, animals, etc.
# `serde` feature on so the save system can persist Player/Bag/Town/ResourceState (savegame.rs).
tileworld_core = { path = "crates/core", features = ["serde"] }
# Save/continue: JSON snapshot of a run, written at each dawn (`src/savegame.rs`).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Same wgpu major bevy 0.19 depends on (29.x) — used in quality.rs to inspect
# RenderAdapterInfo::device_type for the hardware-aware startup preset. Kept at the bare major so
# cargo unifies it with bevy's own wgpu (same compiled crate → DeviceType types match).
wgpu = { version = "29", default-features = false }
# Runtime window icon (taskbar / title-bar / Alt-Tab): winit's window class ships hIcon=0, so it
# does NOT adopt the exe's embedded icon for the live window — we set it ourselves in
# `src/window_icon.rs`. `winit` (pinned to bevy_winit's 0.30 so the WinitWindow types unify) gives
# the `Icon` type; `image` decodes the branding PNG (png-only to keep it lean — already in the tree
# transitively via bevy, so cargo unifies it at no extra compile cost).
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

# Profiling build: turns on Bevy's per-system tracing spans, written to a chrome-trace JSON on exit
# (`trace-<ts>.json`). `cargo run --features profiling` then `tools/trace_summary.py <file>` gives an
# EXACT CPU-time-per-system breakdown (pairs with the GPU per-pass timings the F2/PERF logs already
# show). Off in normal builds — the tracing has real overhead.
[features]
profiling = ["bevy/trace_chrome"]

# Windows-only: embed the app icon + version metadata (ProductName/Company/version) into the
# .exe resource section via build.rs. This brands the .exe FILE icon (Explorer / installer /
# Add-Remove-Programs). The *running window's* icon (taskbar / title-bar) is a separate thing winit
# does NOT take from the exe — that's set at runtime in `src/window_icon.rs`.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Compile bevy deps with optimizations even in dev — otherwise the scene runs
# at single digit FPS. Our own crate stays fast-to-compile at opt-level 0.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
# No debuginfo: the codebase grew big enough that even line-tables-only (debug=1) trips MSVC's
# program-database size cap (LNK1140: "limit exceeded for program database"). debug=0 skips the
# PDB entirely so the link stays under the cap. Backtraces lose file:line — if you need them for a
# debug session, temporarily set CARGO_PROFILE_DEV_DEBUG=1 and accept the (currently failing) link,
# or split the binary. `split-debuginfo` doesn't help on windows-msvc (still one combined PDB).
debug = 0
